feat : 사진 카테고리의 value와 값을 함께전달하기 위해 두개의 리스트 반환으로 변경